--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"cd backend && npm start\" \"cd frontend && npm start\""
+    
+    "dev": "cd frontend && npm start",
+
+    
+    "build": "cd frontend && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
